# import-manager

./: .cursorrules  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .lintstagedrc.mjs  .prettierignore  .prettierrc  CHANGELOG.md  COMPLETE_NOTIFICATION_IMPLEMENTATION_SUCCESS.md  COMPLETE_RESPONSIVE_GUIDE.md  CRITICAL_AUDIT_FINDINGS.md  CUSTOM_ACCENT_COLOR_README.md  DEPLOYMENT.md  DEVELOPMENT_WORKFLOW.md  EXPENSE_DUPLICATE_NOTIFICATIONS_FIXED.md  EXPENSE_IMPORT_GUIDE.md  EXPENSE_MODULE_README.md  EXPENSE_MULTILINE_GUIDE.md  FINAL_NOTIFICATION_IMPLEMENTATION_SUMMARY.md  GITHUB_DEPLOYMENT_SUCCESS.md  INSTALLER_ISSUES_FIX.md  INTEGRATION_GUIDE.md  MANAGE_EXPENSES_NOTIFICATION_FIXES.md  MCP_CURSOR_INTEGRATION_GUIDE.md  MCP_QUALITY_SERVER_README.md  MERGE_CONFLICTS_RESOLVED_SUCCESS.md  NEXT_STEPS_COMPLETION_SUMMARY.md  NOTIFICATION_DUPLICATION_FIXES.md  NOTIFICATION_IMPROVEMENT_SUMMARY.md  PHASE_2_PROGRESS_SUMMARY.md  PLAYWRIGHT_MCP_SETUP.md  README.md  RELEASE_NOTES_v0.1.8.md  RESPONSIVE_IMPLEMENTATION_SUMMARY.md  RESPONSIVE_SCALING_GUIDE.md  SECURITY.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_SETUP_COMPLETE.md  THEME_GUIDE.md  (+24 more)
.github/: README.md  dependabot.yml  pull_request_template.md
.husky/: pre-commit  pre-commit.ps1  (+1 more)
src-tauri/: Cargo.toml  build.rs  deny.toml  tauri-insecure.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: V10__add_missing_fk_indexes.sql  V11__app_metadata_recycle_retention.sql  V12__app_metadata_last_database_maintenance.sql  V13__kpi_governance.sql  V14__kpi_duty_metadata_update.sql  V15__dashboard_erp_cache_alerts.sql  V16__dashboard_activity_erp_fields.sql  V17__exception_workflow.sql  V18__workflow_reliability.sql  V19__workflow_observability.sql  V1__initial_schema.sql  V20__workflow_automation.sql  V21__workflow_rule_change_log.sql  V22__automation_optimization_intelligence.sql  V23__automation_cost_intelligence.sql  V24__workflow_rule_deployment.sql  V25__multi_environment_tenant.sql  V26__deployment_safety.sql  V27__workflow_background_jobs.sql  V28__workflow_job_schedule_recovery.sql  V29__workflow_job_manual_governance.sql  V2__notifications.sql  V30__workflow_production_observability.sql  V31__workflow_incident_management.sql  V32__workflow_incident_engine.sql  V33__workflow_incident_correlation.sql  V34__workflow_failure_burst_log.sql  V35__workflow_incident_unified_intelligence.sql  V36__workflow_incident_suppression.sql  V37__workflow_incident_stabilization.sql  V38__workflow_incident_regression.sql  V39__workflow_structured_regression_metrics.sql  V40__workflow_incident_persistence.sql  V41__workflow_failure_forecast.sql  V42__workflow_forecast_explainability.sql  V43__workflow_forecast_preventive_actions.sql  V44__workflow_forecast_action_log_unique_forecast.sql  V45__system_integrity_snapshot.sql  V46__ai_extraction_log.sql  V47__app_settings.sql  (+7 more)
src-tauri/src/: ai_analytics.rs  ai_prompt_builder.rs  ai_provider.rs  app_settings.rs  batch_processor.rs  commands.rs  confidence_engine.rs  crypto_utils.rs  db.rs  deepseek_client.rs  duplicate_detector.rs  encryption.rs  excel_parser.rs  expense.rs  expense_tests.rs  main.rs  migrations.rs  ocr_engine.rs  ollama_client.rs  playwright_db.rs  restore_control.rs  retry_engine.rs  supplier_matcher.rs  validation.rs
src-tauri/src/commands/: ai_extraction.rs  app_info.rs  app_metadata.rs  backup_key.rs  boe.rs  dashboard_cache.rs  dashboard_metrics.rs  db_maintenance.rs  db_management.rs  deployment_safety.rs  exception_reliability.rs  exception_workflow.rs  expenses.rs  google_drive.rs  invoices.rs  items.rs  logs.rs  mod.rs  oauth_callback.rs  options.rs  recycle_bin.rs  reference_scan.rs  reports.rs  shipments.rs  suppliers.rs  test_reset.rs  utils.rs  workflow_automation.rs  workflow_incident_management.rs  workflow_job_monitoring.rs  workflow_multienv.rs  workflow_observability.rs  workflow_production_observability.rs  workflow_rule_deployment.rs
src-tauri/src/utils/: backup_keyring.rs  encryption.rs  mod.rs
(+2399 files in other folders)
