[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = "https://github.com/janayuv/import-manager"
edition = "2021"
rust-version = "1.71"

build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rusqlite = { version = "0.31.0", features = ["sqlcipher"] }
rand = "0.8"
paste = "1.0"
keyring = "3.6"
base64 = "0.21"
hex = "0.4"
refinery = { version = "0.8", features = ["rusqlite"] }

# Use the exact versions from your cargo tree to ensure compatibility
tauri = { version = "2.0.0-rc.17", features = ["protocol-asset"] }
tauri-plugin-log = { version = "2.0.0-rc.7" }
tauri-plugin-dialog = { version = "2.0.0-rc.8" }
tauri-plugin-fs = { version = "2.0.0-rc.8" }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
thiserror = "1.0"
regex = "1.0"
lazy_static = "1.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
