[package]
name = "app"
version = "0.1.6"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = "https://github.com/janayuv/import-manager"
edition = "2021"
rust-version = "1.71"

build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
paste = "1.0"
keyring = "3.6"
base64 = "0.21"
hex = "0.4"
refinery = { version = "0.8", features = ["rusqlite"] }

# Rust crate versions track crates.io (npm CLI can be newer).
tauri = { version = "2.10", features = ["protocol-asset"] }
tauri-plugin-log = "2.8"
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2.5"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
thiserror = "1.0"
regex = "1.0"
lazy_static = "1.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
